--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-test
+<! DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta chartset="utf-8">
+        <meta name="descritpion" content="js">
+        <link type="stylesheet" href="/cour/css/index.css">
+
+    </head>
+    <body>
+
+
+        <form class="search-bar" action="/recherche" method="post">
+            <input type="text" name="recherche" placeholder="Rechercher">
+            <button type="submit"></button>
+
+        <article>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, laudantium sequi! Placeat voluptate perspiciatis voluptatibus voluptates alias magnam, distinctio consectetur amet, magni repellendus at minus! Molestiae ducimus temporibus optio sequi.
+        </article>
+        <article>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, laudantium sequi! Placeat voluptate perspiciatis voluptatibus voluptates alias magnam, distinctio consectetur amet, magni repellendus at minus! Molestiae ducimus temporibus optio sequi.
+        </article>
+        <article>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, laudantium sequi! Placeat voluptate perspiciatis voluptatibus voluptates alias magnam, distinctio consectetur amet, magni repellendus at minus! Molestiae ducimus temporibus optio sequi.
+        </article>
+
+
+
+    </body>
+</html>
